test/modules/standard/FileSystem/lydia/sameFile/brokenSymlink.good
brokenSymlink.chpl:25: error: uncaught error - No such file or directory in sameFile(moved.txt, linkToIt)
